sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:6: error: '(' expected but identifier found.
  if getNombreValeurs() == 10 {
     ^AlgShellSort:16: error: illegal start of simple expression
  var ecart = getNombreValeurs()/2
  ^